2002-08-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_BSP_ALIAS.
	Add RTEMS_CHECK_BSP_CACHE.

2002-08-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bsp.mak: New.

2002-08-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove RTEMS_BSP.cache generation.
	Remove handling custom/*.cfgs.
	Remove handling custom/default.cfg.
	* configure.ac: Remove handling of custom/*.cfgs.
	Remove auto* generated custom/default.cfg.

2002-04-24	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* custom/Makefile.am: Remove.
	* compilers/Makefile.am: Remove.
	* compilers/.cvsignore: Remove.
	* Makefile.am: Merge-in former */Makefile.ams.
	Add more vars  to <BSP>.cache.
	* configure.ac: Reflect changes above. Cosmetic fixes.

2002-04-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove ENABLE_GCC28.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* compilers/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* custom/Makefile.am: Remove AUTOMAKE_OPTIONS.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-10-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.in: Reworked for autoconf-2.52.

2001-02-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use exec_prefix not prefix.

2001-02-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.inc.in: Add exec_prefix, remove terminating / from
	PROJECT_ROOT.
	* host.cfg.in: Update from <toplevel>/make/host.cfg.in

2001-02-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.inc.in: Remove RTEMS_HOST.

2000-11-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.inc.in: Use * instead of *_FOR_TARGET (BUG-FIX).

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
