@@ -38,8 +38,10 @@ RTEMS_HAS_POSIX_API = @RTEMS_HAS_POSIX_API@
 RTEMS_HAS_ITRON_API = @RTEMS_HAS_ITRON_API@
 RTEMS_USE_MACROS = @RTEMS_USE_MACROS@
 RTEMS_HAS_CPLUSPLUS = @RTEMS_HAS_CPLUSPLUS@
-RTEMS_USE_GCC272 = @RTEMS_USE_GCC272@
-RTEMS_LIBC_DIR = @RTEMS_LIBC_DIR@
+# OBSOLETE: Don't use
+# RTEMS_USE_GCC272 = no
+# OBSOLETE: Don't use
+# RTEMS_LIBC_DIR = @RTEMS_LIBC_DIR@
 
 export RTEMS_BSP
 export RTEMS_CUSTOM
