@@ -1,3 +1,8 @@
+2002-09-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.inc.in: Comment out RTEMS_USE_GCC272.
+	Comment out RTEMS_LIBC_DIR.
+
 2002-08-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* configure.ac: Remove RTEMS_BSP_ALIAS.
